--- a/games.html
+++ b/games.html
@@ -94,9 +94,13 @@
     </style>
 </head>
 <body>
-
+    <div class="back-button">
+        <a href="quit.html">
+            Exit - Games
+        </a>
+    </div>
 <header>
-    <h1>- PiVault v1 -</h1>
+    <h1>- PiVault v1.5 -</h1>
     <p>Launch HTML file easily!</p>
 </header>
 
@@ -108,14 +112,15 @@
 </main>
 
 <section class="categories">
-    <a href="ScratchOpening.html" class="btn-games">Scratchopening</a>
-    <a href="Casse-tete.html" class="btn-games">Casse-Tête</a>
-    <a href="reflexe.html" class="btn-games">reflexe</a>
-    <a href="flappy-bird-hardcore.html" class="btn-games">flappy-bird-hardcore</a>
+    <a href="ScratchOpening.html" class="btn-games">Scratch opening</a>
+    <a href="Casse-tete.html" class="btn-games">Brain Teaser</a>
+    <a href="reflexe.html" class="btn-games">reflex</a>
+    <a href="flappy-bird-hardcore.html" class="btn-games">flappy bird_hardcore</a>
+    <a href="MoneyClicker.html" class="btn-games">MoneyClicker</a>
 </section>
 
 <footer>
-    <p>&copy; 2025-2026 : <a href="https://guns.lol/saysaa" target="_blank">Saysaa</a> All rights reserved.</p>
+    <p>&copy; 2025-2026 : <a href="https://guns.lol/saysaa" target="_blank">Saysaa</a></p>
     <p>Support the project : <a href="https://discord.gg/CCdndVMUxr" target="_blank">Join the Discord server</a></p>
 </footer>
 
