--- a/quit.html
+++ b/quit.html
@@ -87,6 +87,21 @@
             margin-top: 1rem;
         }
 
+        .btn-about {
+            font-size: 1rem;
+            text-transform: uppercase;
+            text-decoration: none;
+            padding: 1em 2em;
+            display: inline-block;
+            border-radius: 50px;
+            background-color: rgb(68, 66, 68); 
+            color: #fff;
+            box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
+            transition: background-color 0.3s, transform 0.2s;
+            text-align: center;
+            margin-top: 1rem;
+        }
+
         .btn:hover {
             background-color: #c40ec4;
             transform: translateY(-3px);
@@ -126,7 +141,7 @@
 <body>
 
 <header>
-    <h1>- PiVault v1 -</h1>
+    <h1>- PiVault v1.5 -</h1>
     <p>Launch HTML file easily!</p>
 </header>
 
@@ -140,12 +155,11 @@
 <section class="categories">
     <a href="games.html" class="btn-games">Games</a>
     <a href="tools.html" class="btn-tools">Tools</a>
-    <a href="launch.html" class="btn-other">Launch files</a>
-    <a href="about.html" class="btn-other">About</a>
+    <a href="about.html" class="btn-about">About</a>
 </section>
 
 <footer>
-    <p>&copy; 2025-2026 : <a href="https://guns.lol/saysaa" target="_blank">Saysaa</a> All rights reserved.</p>
+    <p>&copy; 2025-2026 : <a href="https://guns.lol/saysaa" target="_blank">Saysaa</a></p>
     <p>Support the project : <a href="https://discord.gg/CCdndVMUxr" target="_blank">Join the Discord server</a></p>
 </footer>
 
