--- a/tools.html
+++ b/tools.html
@@ -57,6 +57,21 @@
             margin-top: 1rem;
         }
 
+        .btn-other {
+            font-size: 1rem;
+            text-transform: uppercase;
+            text-decoration: none;
+            padding: 1em 2em;
+            display: inline-block;
+            border-radius: 50px;
+            background-color: rgb(116, 8, 107); 
+            color: #fff;
+            box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
+            transition: background-color 0.3s, transform 0.2s;
+            text-align: center;
+            margin-top: 1rem;
+        }
+
         .btn:hover {
             background-color: #c40ec4;
             transform: translateY(-3px);
@@ -94,9 +109,13 @@
     </style>
 </head>
 <body>
-
+    <div class="back-button">
+        <a href="quit.html">
+            Exit - Tools
+        </a>
+    </div>
 <header>
-    <h1>- PiVault v1 -</h1>
+    <h1>- PiVault v1.5 -</h1>
     <p>Launch HTML file easily!</p>
 </header>
 
@@ -111,10 +130,12 @@
     <a href="webpaint.html" class="btn-games">Webpaint</a>
     <a href="ipeye.html" class="btn-games">IPEye</a>
     <a href="deveye.html" class="btn-games">DevEye</a>
+    <a href="calibration_pivault_screen.html" class="btn-games">Calibration Test</a>
+    <a href="import.html" class="btn-other">Launch files</a>
 </section>
 
 <footer>
-    <p>&copy; 2025-2026 : <a href="https://guns.lol/saysaa" target="_blank">Saysaa</a> All rights reserved.</p>
+    <p>&copy; 2025-2026 : <a href="https://guns.lol/saysaa" target="_blank">Saysaa</a></p>
     <p>Support the project : <a href="https://discord.gg/CCdndVMUxr" target="_blank">Join the Discord server</a></p>
 </footer>
 
